# json2pb

./: Cargo.toml  README.md  hello.json
.github/workflows/: rust.yml
src/: lib.rs  main.rs  pbgen.rs
src/parser/: json.rs  mod.rs
tests/pairs/: 1.expect  1.json  2.expect  2.json  3.expect  3.json
