[package]
name = "json2pb"
version = "0.1.0"
authors = ["ronaldoliu@tencent.com"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/caibirdme/json2pb"
readme = "README.md"
keywords = ["json", "protobuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "json2pb"
path = "src/lib.rs"

[[bin]]
name = "j2pb"
path = "src/bin/j2pb.rs"

[dependencies]
clap = "2.33.2"
nom = "6.0.0-alpha1"
